--- a/index.html
+++ b/index.html
@@ -1,102 +1,72 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>AR Камера</title>
-  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.0/dist/mindar-image-aframe.prod.js"></script>
   <style>
-    html, body {
+    body {
       margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
       overflow: hidden;
-      touch-action: none; /* блокує pinch zoom */
-      font-family: Arial, sans-serif;
-    }
-    a-scene {
-      width: 100% !important;
-      height: 100% !important;
-      position: fixed;
-      top: 0;
-      left: 0;
-    }
-    #scanText {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: #FFD700;
-      font-size: 2em;
-      font-weight: bold;
-      text-shadow: 2px 2px 6px #000;
-      z-index: 10;
-      text-align: center;
-      width: 90%;
-    }
-    #smartLessaBtn {
-      position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #ff0044;
-      color: white;
-      padding: 14px 24px;
-      border-radius: 30px;
-      font-size: 1.1em;
-      font-weight: bold;
-      text-decoration: none;
-      z-index: 10;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-    }
-    #smartLessaBtn:hover {
-      background: #cc0036;
     }
   </style>
+  <script>
+    // Компонент для анімації "пульсації"
+    AFRAME.registerComponent('pulse', {
+      schema: { speed: { default: 1000 } },
+      init: function() {
+        let el = this.el;
+        let scale = el.getAttribute('scale');
+        el.setAttribute('animation__pulse', {
+          property: 'scale',
+          from: `${scale.x} ${scale.y} ${scale.z}`,
+          to: `${scale.x * 1.1} ${scale.y * 1.1} ${scale.z * 1.1}`,
+          dir: 'alternate',
+          loop: true,
+          dur: this.data.speed
+        });
+      }
+    });
+  </script>
 </head>
 <body>
-  <div id="scanText">Наведи на зображення</div>
 
-  <a-scene embedded id="arScene" arjs="sourceType: webcam; detectionMode: mono; trackingMethod: best;">
-    <a-marker id="marker" type="pattern" url="marker.patt">
-      <a-video id="arVideo" src="ar-video.mp4" position="0 0 0" rotation="-90 0 0"></a-video>
-    </a-marker>
-    <a-entity camera></a-entity>
+  <a-scene mindar-image="imageTargetSrc: https://lessa2332.github.io/my-ar-vizytka/assets/targets/mycard.mind; autoStart: true; maxTrack: 1"
+           color-space="sRGB"
+           renderer="colorManagement: true, physicallyCorrectLights: true"
+           vr-mode-ui="enabled: false"
+           device-orientation-permission-ui="enabled: false">
+    
+    <a-camera position="0 0 0" look-controls="enabled: false" cursor="rayOrigin: mouse" raycaster="objects: .interactive-object"></a-camera>
+
+    <a-entity mindar-image-target="targetIndex: 0">
+
+      <a-plane position="0 0.5 0" height="1.5" width="2.5" rotation="90 0 0"
+               material="color: #000033; opacity: 0.7; side: double; shader: flat"
+               animation="property: scale; from: 0 0 0; to: 1 1 1; dur: 1000; easing: easeOutQuad">
+
+        <a-image src="https://lessa2332.github.io/my-ar-vizytka/assets/images/photo.jpg" position="0 0.45 0.01" height="0.6" width="0.6"
+                 pulse="speed: 1500"
+                 animation="property: rotation; to: 0 360 0; loop: true; dur: 10000"></a-image>
+
+        <a-text value="Олеся Олександрівна\nІнноватор в освіті" position="0 -0.1 0.01" align="center" color="#fff" width="2"
+                animation="property: opacity; from: 0; to: 1; dur: 2000"></a-text>
+
+        <a-entity position="0 0 0.05" rotation="0 0 0"
+                  animation="property: rotation; to: 0 360 0; loop: true; dur: 20000">
+            <a-image class="interactive-object" src="https://lessa2332.github.io/my-ar-vizytka/assets/icons/web-icon.png" position="0.9 0 0" height="0.3" width="0.3"
+                     onclick="window.open('https://sites.google.com/view/ai-smartlessa/', '_blank')"
+                     animation__hover="property: scale; to: 1.2 1.2 1.2; startEvents: mouseenter; pauseEvents: mouseleave"
+                     animation__unhover="property: scale; to: 1 1 1; startEvents: mouseleave"></a-image>
+
+            <a-image class="interactive-object" src="https://lessa2332.github.io/my-ar-vizytka/assets/icons/yt-icon.png" position="-0.9 0 0" height="0.3" width="0.3"
+                     onclick="window.open('https://www.youtube.com/', '_blank')"
+                     animation__hover="property: scale; to: 1.2 1.2 1.2; startEvents: mouseenter; pauseEvents: mouseleave"
+                     animation__unhover="property: scale; to: 1 1 1; startEvents: mouseleave"></a-image>
+        </a-entity>
+      </a-plane>
+
+    </a-entity>
   </a-scene>
-
-  <a href="https://youtube.com/playlist?list=PL6UDFwT9TzFxsVdFiEBsQ9yFpcYRPOpfO&si=IyXv1SkdPyvhcW7Z"
-     id="smartLessaBtn" target="_blank">@SmartLessa</a>
-
-  <script>
-    const marker = document.getElementById('marker');
-    const scanText = document.getElementById('scanText');
-    const arVideo = document.getElementById('arVideo');
-
-    // Автоматичні пропорції відео
-    arVideo.addEventListener('loadedmetadata', () => {
-      const aspect = arVideo.videoWidth / arVideo.videoHeight;
-      arVideo.setAttribute('width', aspect * 2);
-      arVideo.setAttribute('height', 2);
-    });
-
-    marker.addEventListener('markerFound', () => {
-      scanText.style.display = 'none';
-      arVideo.play();
-    });
-
-    marker.addEventListener('markerLost', () => {
-      scanText.style.display = 'block';
-      arVideo.pause();
-    });
-
-    // Фікс висоти для мобільних браузерів
-    function fixHeight() {
-      document.body.style.height = window.innerHeight + 'px';
-    }
-    window.addEventListener('resize', fixHeight);
-    fixHeight();
-  </script>
 </body>
 </html>
