--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       init: function () {
         this.questions = [
           { q: 'Найвища гора України — це?', a: ['Петрос', 'Говерла', 'Піп Іван'], correct: 1 },
-          { q: 'На скільки областей ділиться Україна?', a: ['22', '24', '25'], correct: 1 },
+          { q: 'Скільки адміністративних областей має Україна?', a: ['22', '24', '25'], correct: 1 },
           { q: 'Яка річка України найдовша?', a: ['Дніпро', 'Дунай', 'Південний Буг'], correct: 0 },
           { q: 'Яка країна межує з Україною на півночі?', a: ['Польща', 'Білорусь', 'Румунія'], correct: 1 },
           { q: 'Скільки морів омиває Україну?', a: ['Одне', 'Два', 'Три'], correct: 1 }
@@ -171,3 +171,4 @@
   </script>
 </body>
 </html>
+
