--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AR Business Card</title>
+    <title>Simple AR Card</title>
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
     <style>
@@ -11,255 +11,19 @@
             margin: 0;
             overflow: hidden;
         }
-        #ar-scene {
-            width: 100vw;
-            height: 100vh;
-        }
     </style>
 </head>
 <body>
-    <a-scene mindar-image="imageTargetSrc: ./targets/mycard.mind; autoStart: false; uiLoading: no; uiError: no; uiScanning: no;" embedded color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" id="ar-scene">
+    <a-scene mindar-image="imageTargetSrc: ./targets/mycard.mind;" embedded color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
         <a-assets>
             <img id="main-photo" src="./images/photo.jpg">
-            <video id="main-video" src="./video/lesa.mp4" loop="false" preload="auto"></video>
-            <img id="icon-googlesites" src="./icons/googlesites.png">
-            <img id="icon-goy" src="./icons/goy.png">
-            <img id="icon-instagram" src="./icons/instagram.png">
-            <img id="icon-play" src="./icons/play.png">
-            <img id="icon-telegram" src="./icons/telegram.png">
-            <img id="icon-youtube" src="./icons/youtube.png">
         </a-assets>
 
-        <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="far: 10000; objects: .clickable"></a-camera>
+        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0">
-            <!-- Main photo plane -->
-            <a-plane src="#main-photo" position="0 0 0" height="1" width="1" rotation="0 0 0" class="clickable" id="main-plane"></a-plane>
-
-            <!-- Video entity, initially hidden to the left (no clickable class) -->
-            <a-video src="#main-video" position="-1.5 0 0" height="0.8" width="1.42" rotation="0 0 0" visible="false" id="slide-video"></a-video>
-
-            <!-- Play icon for video -->
-            <a-plane src="#icon-play" position="-1.5 0 0.01" height="0.2" width="0.2" rotation="0 0 0" visible="false" class="clickable" id="video-play-icon"></a-plane>
-
-            <!-- Game button, initially hidden to the right -->
-            <a-plane src="#icon-goy" position="1.5 0 0" height="0.2" width="0.2" rotation="0 0 0" visible="false" class="clickable" id="game-button"></a-plane>
-
-            <!-- Social media buttons, initially hidden -->
-            <a-plane src="#icon-googlesites" position="-0.4 -0.6 0" height="0.15" width="0.15" rotation="0 0 0" class="clickable" id="googlesites-button" visible="false"></a-plane>
-            <a-plane src="#icon-goy" position="-0.2 -0.6 0" height="0.15" width="0.15" rotation="0 0 0" class="clickable" id="goy-button" visible="false"></a-plane>
-            <a-plane src="#icon-instagram" position="0 -0.6 0" height="0.15" width="0.15" rotation="0 0 0" class="clickable" id="instagram-button" visible="false"></a-plane>
-            <a-plane src="#icon-telegram" position="0.2 -0.6 0" height="0.15" width="0.15" rotation="0 0 0" class="clickable" id="telegram-button" visible="false"></a-plane>
-            <a-plane src="#icon-youtube" position="0.4 -0.6 0" height="0.15" width="0.15" rotation="0 0 0" class="clickable" id="youtube-button" visible="false"></a-plane>
-
-            <!-- Quiz entity with canvas plane -->
-            <a-entity id="quiz-entity" position="0 0.5 0" scale="1 1 1" visible="false">
-                <a-plane id="quiz-plane" position="0 0 0" width="0.8" height="0.6" material="src: #quiz-canvas; transparent: true" rotation="0 0 0" class="clickable"></a-plane>
-            </a-entity>
+            <a-plane src="#main-photo" position="0 0 0" height="1" width="1" rotation="0 0 0"></a-plane>
         </a-entity>
     </a-scene>
-
-    <canvas id="quiz-canvas" width="400" height="300" style="display: none;"></canvas>
-
-    <script>
-        const scene = document.querySelector('a-scene');
-        const mainPlane = document.querySelector('#main-plane');
-        const slideVideo = document.querySelector('#slide-video');
-        const videoPlayIcon = document.querySelector('#video-play-icon');
-        const gameButton = document.querySelector('#game-button');
-        const videoElement = document.querySelector('#main-video');
-        const quizEntity = document.querySelector('#quiz-entity');
-        const quizPlane = document.querySelector('#quiz-plane');
-        const quizCanvas = document.getElementById('quiz-canvas');
-        const ctx = quizCanvas.getContext('2d');
-
-        // Social media buttons
-        const socialButtons = {
-            'googlesites-button': 'https://sites.google.com/view/questaria/%D0%B3%D0%BE%D0%BB%D0%BE%D0%B2%D0%BD%D0%B0',
-            'goy-button': 'https://example.com/goy',
-            'instagram-button': 'https://www.instagram.com/smart23lessa?igsh=aHN5dzZudnJneW85',
-            'telegram-button': 'https://t.me/+Ck0ua_cmlI84Yjcy',
-            'youtube-button': 'https://www.youtube.com/@23SmartLessa32'
-        };
-
-        // Handle clicks on social buttons
-        Object.keys(socialButtons).forEach(id => {
-            const button = document.querySelector(`#${id}`);
-            button.addEventListener('click', () => {
-                window.open(socialButtons[id], '_blank');
-            });
-        });
-
-        // Detect AR target and show elements
-        scene.addEventListener('targetFound', event => {
-            slideVideo.setAttribute('visible', true);
-            slideVideo.setAttribute('animation', 'property: position; to: -0.75 0 0; dur: 1000; easing: easeInOutQuad');
-
-            videoPlayIcon.setAttribute('visible', true);
-            videoPlayIcon.setAttribute('animation', 'property: position; to: -0.75 0 0.01; dur: 1000; easing: easeInOutQuad');
-
-            gameButton.setAttribute('visible', true);
-            gameButton.setAttribute('animation', 'property: position; to: 0.75 0 0; dur: 1000; easing: easeInOutQuad');
-
-            // Show social buttons
-            Object.keys(socialButtons).forEach(id => {
-                const button = document.querySelector(`#${id}`);
-                button.setAttribute('visible', true);
-            });
-        });
-
-        scene.addEventListener('targetLost', event => {
-            slideVideo.setAttribute('visible', false);
-            slideVideo.setAttribute('position', '-1.5 0 0');
-            videoElement.pause();
-
-            videoPlayIcon.setAttribute('visible', false);
-            videoPlayIcon.setAttribute('position', '-1.5 0 0.01');
-
-            gameButton.setAttribute('visible', false);
-            gameButton.setAttribute('position', '1.5 0 0');
-
-            // Hide social buttons
-            Object.keys(socialButtons).forEach(id => {
-                const button = document.querySelector(`#${id}`);
-                button.setAttribute('visible', false');
-            });
-
-            hideQuiz();
-        });
-
-        // Click on video play icon
-        videoPlayIcon.addEventListener('click', () => {
-            videoElement.play();
-            videoPlayIcon.setAttribute('visible', false);
-        });
-
-        // Show play icon when video ends
-        videoElement.addEventListener('ended', () => {
-            videoPlayIcon.setAttribute('visible', true);
-        });
-
-        // Click on game button to start quiz
-        gameButton.addEventListener('click', () => {
-            startQuiz();
-        });
-
-        // Quiz logic
-        const questions = [
-            {
-                question: "Яка столиця України?",
-                options: ["Київ", "Львів", "Одеса", "Харків"],
-                answer: "Київ"
-            },
-            {
-                question: "Яка найдовша річка в Україні?",
-                options: ["Дніпро", "Дністер", "Південний Буг", "Дунай"],
-                answer: "Дніпро"
-            },
-            {
-                question: "Яке море омиває Україну на півдні?",
-                options: ["Чорне море", "Балтійське море", "Середземне море", "Каспійське море"],
-                answer: "Чорне море"
-            },
-            {
-                question: "Яка найвища гора в Україні?",
-                options: ["Говерла", "Роман-Кош", "Піп Іван", "Петрос"],
-                answer: "Говерла"
-            },
-            {
-                question: "З якою країною Україна межує на півночі?",
-                options: ["Білорусь", "Росія", "Польща", "Словаччина"],
-                answer: "Білорусь"
-            }
-        ];
-
-        let currentQuestion = 0;
-        let score = 0;
-        let feedback = '';
-        let feedbackColor = '';
-        let isQuizEnded = false;
-
-        function startQuiz() {
-            currentQuestion = 0;
-            score = 0;
-            feedback = '';
-            isQuizEnded = false;
-            quizEntity.setAttribute('visible', true);
-            drawQuiz();
-        }
-
-        function drawQuiz() {
-            ctx.clearRect(0, 0, 400, 300);
-            ctx.fillStyle = 'white';
-            ctx.fillRect(0, 0, 400, 300);
-            ctx.fillStyle = 'black';
-            ctx.font = '20px Arial';
-            ctx.textAlign = 'left';
-
-            if (currentQuestion < questions.length) {
-                const q = questions[currentQuestion];
-                ctx.fillText(q.question, 20, 30);
-                q.options.forEach((opt, i) => {
-                    ctx.fillStyle = 'lightblue';
-                    ctx.fillRect(20, 50 + i * 60, 360, 40);
-                    ctx.fillStyle = 'black';
-                    ctx.fillText(opt, 30, 75 + i * 60);
-                });
-                if (feedback) {
-                    ctx.fillStyle = feedbackColor;
-                    ctx.fillText(feedback, 20, 280);
-                }
-            } else {
-                isQuizEnded = true;
-                ctx.fillText(`Гра завершена! Твій рахунок: ${score}/${questions.length}`, 20, 30);
-                ctx.fillStyle = 'green';
-                ctx.fillRect(100, 200, 200, 40);
-                ctx.fillStyle = 'white';
-                ctx.fillText('Завершити', 150, 225);
-            }
-        }
-
-        function checkAnswer(selected) {
-            const correct = questions[currentQuestion].answer;
-            if (selected === correct) {
-                score++;
-                feedback = 'Правильно!';
-                feedbackColor = 'green';
-            } else {
-                feedback = `Неправильно! Правильна відповідь: ${correct}`;
-                feedbackColor = 'red';
-            }
-            drawQuiz();
-            setTimeout(() => {
-                feedback = '';
-                currentQuestion++;
-                drawQuiz();
-            }, 2000);
-        }
-
-        function hideQuiz() {
-            quizEntity.setAttribute('visible', false);
-        }
-
-        // Handle clicks on quiz plane
-        quizPlane.addEventListener('click', (evt) => {
-            const uv = evt.detail.intersection.uv;
-            const clickX = uv.x * 400;
-            const clickY = (1 - uv.y) * 300;
-            if (currentQuestion < questions.length) {
-                if (clickX > 20 && clickX < 380 && clickY > 50 && clickY < 270) {
-                    const index = Math.floor((clickY - 50) / 60);
-                    if (index >= 0 && index < 4) {
-                        const selected = questions[currentQuestion].options[index];
-                        checkAnswer(selected);
-                    }
-                }
-            } else if (isQuizEnded) {
-                if (clickX > 100 && clickX < 300 && clickY > 200 && clickY < 240) {
-                    hideQuiz();
-                }
-            }
-        });
-    </script>
 </body>
 </html>
